<?xml version="1.0"?>

<!-- 
 teleop_web/package.xml

 Copyright (C) 2018 Alessandro Francescon
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<package>

  <name>teleop_web</name>
  <version>1.0.0</version>
  <description>The web teleoperation package</description>
  <license>GPL</license>
  
  <url type="blog">http://www.geduino.org</url> 
  
  <author email="alessandro.francescon@gmail.com">Alessandro Francescon</author>
  <maintainer email="alessandro.francescon@gmail.com">Alessandro Francescon</maintainer>
  
  <run_depend>geometry_msgs</run_depend>
  
  <export>
  </export>

</package>
